--- a/TP2-Mod5-Pizza/TP2-Mod5-Pizza.csproj
+++ b/TP2-Mod5-Pizza/TP2-Mod5-Pizza.csproj
@@ -126,8 +126,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\MyHelpers.cs" />
     <Compile Include="Models\PizzaIngredientPateVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\IngredientValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -169,6 +171,9 @@
     <Content Include="Views\Pizza\Delete.cshtml" />
     <Content Include="Views\Pizza\Index.cshtml" />
     <Content Include="Views\Pizza\Create.cshtml" />
+    <Content Include="Views\Shared\_PizzaDisplay.cshtml" />
+    <Content Include="Views\Shared\_PizzaDisplayWithId.cshtml" />
+    <Content Include="Views\Pizza\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
