--- a/TP2-Mod5-Pizza/TP2-Mod5-Pizza.csproj
+++ b/TP2-Mod5-Pizza/TP2-Mod5-Pizza.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Models\PizzaIngredientPateVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\IngredientValidator.cs" />
+    <Compile Include="Validation\NomUniqueValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
