Tp 3 Module 5 finalisation

--- a/TP2-Mod5-Pizza/TP2-Mod5-Pizza.csproj
+++ b/TP2-Mod5-Pizza/TP2-Mod5-Pizza.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\IngredientValidator.cs" />
     <Compile Include="Validation\NomUniqueValidator.cs" />
+    <Compile Include="Validation\UniqueIngredientsValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
