--- a/TP1-Mod6-Dojo/TP1-Mod6-Dojo.csproj
+++ b/TP1-Mod6-Dojo/TP1-Mod6-Dojo.csproj
@@ -136,8 +136,8 @@
       <DependentUpon>202009211430398_DojoV1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\ArmesController.cs" />
-    <Compile Include="Models\SamouraisController.cs" />
+    <Compile Include="Controllers\ArmesController.cs" />
+    <Compile Include="Controllers\SamouraisController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -189,6 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
