--- a/TP1-Mod6-Dojo/TP1-Mod6-Dojo.csproj
+++ b/TP1-Mod6-Dojo/TP1-Mod6-Dojo.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Controllers\ArmesController.cs" />
     <Compile Include="Controllers\SamouraisController.cs" />
+    <Compile Include="Models\SamouraiVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -189,7 +190,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
