--- a/TP1-Mod6-Dojo/TP1-Mod6-Dojo.csproj
+++ b/TP1-Mod6-Dojo/TP1-Mod6-Dojo.csproj
@@ -126,18 +126,31 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ArtMartialsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Data\TP1_Mod6_DojoContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202009211430398_DojoV1.cs" />
-    <Compile Include="Migrations\202009211430398_DojoV1.Designer.cs">
-      <DependentUpon>202009211430398_DojoV1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Controllers\ArmesController.cs" />
     <Compile Include="Controllers\SamouraisController.cs" />
+    <Compile Include="Migrations\202009230814558_mig3.cs" />
+    <Compile Include="Migrations\202009230814558_mig3.Designer.cs">
+      <DependentUpon>202009230814558_mig3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202009230924435_mig4.cs" />
+    <Compile Include="Migrations\202009230924435_mig4.Designer.cs">
+      <DependentUpon>202009230924435_mig4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202009230925440_mig5.cs" />
+    <Compile Include="Migrations\202009230925440_mig5.Designer.cs">
+      <DependentUpon>202009230925440_mig5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202009231224029_mig6.cs" />
+    <Compile Include="Migrations\202009231224029_mig6.Designer.cs">
+      <DependentUpon>202009231224029_mig6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\SamouraiVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -187,6 +200,11 @@
     <Content Include="Views\Samourais\Details.cshtml" />
     <Content Include="Views\Samourais\Edit.cshtml" />
     <Content Include="Views\Samourais\Index.cshtml" />
+    <Content Include="Views\ArtMartials\Create.cshtml" />
+    <Content Include="Views\ArtMartials\Delete.cshtml" />
+    <Content Include="Views\ArtMartials\Details.cshtml" />
+    <Content Include="Views\ArtMartials\Edit.cshtml" />
+    <Content Include="Views\ArtMartials\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -211,8 +229,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202009211430398_DojoV1.resx">
-      <DependentUpon>202009211430398_DojoV1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202009230814558_mig3.resx">
+      <DependentUpon>202009230814558_mig3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009230924435_mig4.resx">
+      <DependentUpon>202009230924435_mig4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009230925440_mig5.resx">
+      <DependentUpon>202009230925440_mig5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009231224029_mig6.resx">
+      <DependentUpon>202009231224029_mig6.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
